// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query Interface Should load type for aclitem sql ([Sql "SELECT 'pg_monitor=r*/pg_read_all_stats'::aclitem"]) 1`] = `
Object {
  "aclitem": "pg_monitor=r*/pg_read_all_stats",
}
`;

exports[`Query Interface Should load type for aclitem sql ([Sql "SELECT 'pg_monitor=r*/pg_read_all_stats'::aclitem"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "aclitem",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for bit sql ([Sql "SELECT E'1'::bit"]) 1`] = `
Object {
  "bit": "1",
}
`;

exports[`Query Interface Should load type for bit sql ([Sql "SELECT E'1'::bit"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "bit",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for box sql ([Sql "SELECT '(1,2),(3,4)'::box"]) 1`] = `
Object {
  "box": "(3,4),(1,2)",
}
`;

exports[`Query Interface Should load type for box sql ([Sql "SELECT '(1,2),(3,4)'::box"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "box",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for bpchar sql ([Sql "SELECT 'A'::bpchar"]) 1`] = `
Object {
  "bpchar": "A",
}
`;

exports[`Query Interface Should load type for bpchar sql ([Sql "SELECT 'A'::bpchar"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "bpchar",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for bytea sql ([Sql "SELECT E'\\\\000'::bytea"]) 1`] = `
Object {
  "bytea": Object {
    "data": Array [
      0,
    ],
    "type": "Buffer",
  },
}
`;

exports[`Query Interface Should load type for bytea sql ([Sql "SELECT E'\\\\000'::bytea"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "bytea",
      "type": Object {
        "type": "Buffer",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for cid sql ([Sql "SELECT '1'::cid"]) 1`] = `
Object {
  "cid": "1",
}
`;

exports[`Query Interface Should load type for cid sql ([Sql "SELECT '1'::cid"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "cid",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for cidr sql ([Sql "SELECT '1.1.1.1/32'::cidr"]) 1`] = `
Object {
  "cidr": "1.1.1.1/32",
}
`;

exports[`Query Interface Should load type for cidr sql ([Sql "SELECT '1.1.1.1/32'::cidr"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "cidr",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for circle sql ([Sql "SELECT '<(1,2),3>'::circle"]) 1`] = `
Object {
  "circle": Object {
    "radius": 3,
    "x": 1,
    "y": 2,
  },
}
`;

exports[`Query Interface Should load type for circle sql ([Sql "SELECT '<(1,2),3>'::circle"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "circle",
      "type": Object {
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "radius",
            "type": Object {
              "type": "Number",
            },
          },
        ],
        "type": "ObjectLiteralConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for cstring sql ([Sql "SELECT '1'::cstring"]) 1`] = `
Object {
  "cstring": "1",
}
`;

exports[`Query Interface Should load type for cstring sql ([Sql "SELECT '1'::cstring"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "cstring",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for daterange sql ([Sql "SELECT '[2010-01-01, 2010-01-02)'::daterange"]) 1`] = `
Object {
  "daterange": "[2010-01-01,2010-01-02)",
}
`;

exports[`Query Interface Should load type for daterange sql ([Sql "SELECT '[2010-01-01, 2010-01-02)'::daterange"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "daterange",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for inet sql ([Sql "SELECT '::10.2.3.4'::inet"]) 1`] = `
Object {
  "inet": "::10.2.3.4",
}
`;

exports[`Query Interface Should load type for inet sql ([Sql "SELECT '::10.2.3.4'::inet"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "inet",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for int2vector sql ([Sql "SELECT '1'::int2vector"]) 1`] = `
Object {
  "int2vector": "1",
}
`;

exports[`Query Interface Should load type for int2vector sql ([Sql "SELECT '1'::int2vector"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "int2vector",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for int4range sql ([Sql "SELECT '[1,2)'::int4range"]) 1`] = `
Object {
  "int4range": "[1,2)",
}
`;

exports[`Query Interface Should load type for int4range sql ([Sql "SELECT '[1,2)'::int4range"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "int4range",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for int8range sql ([Sql "SELECT '[1,2)'::int8range"]) 1`] = `
Object {
  "int8range": "[1,2)",
}
`;

exports[`Query Interface Should load type for int8range sql ([Sql "SELECT '[1,2)'::int8range"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "int8range",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for interval sql ([Sql "SELECT '1 day + 1 hour'::interval"]) 1`] = `
Object {
  "interval": PostgresInterval {
    "days": 1,
    "hours": 1,
  },
}
`;

exports[`Query Interface Should load type for interval sql ([Sql "SELECT '1 day + 1 hour'::interval"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "interval",
      "type": Object {
        "items": Array [
          Object {
            "name": "years",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "months",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "days",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "hours",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "minutes",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "seconds",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "milliseconds",
            "type": Object {
              "type": "Number",
            },
          },
        ],
        "type": "ObjectLiteralConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for line sql ([Sql "SELECT '{1,-1,1}'::line"]) 1`] = `
Object {
  "line": "{1,-1,1}",
}
`;

exports[`Query Interface Should load type for line sql ([Sql "SELECT '{1,-1,1}'::line"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "line",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for lseg sql ([Sql "SELECT '(1,2,3,4)'::lseg"]) 1`] = `
Object {
  "lseg": "[(1,2),(3,4)]",
}
`;

exports[`Query Interface Should load type for lseg sql ([Sql "SELECT '(1,2,3,4)'::lseg"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "lseg",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for macaddr sql ([Sql "SELECT '08:00:2b:01:02:03'::macaddr"]) 1`] = `
Object {
  "macaddr": "08:00:2b:01:02:03",
}
`;

exports[`Query Interface Should load type for macaddr sql ([Sql "SELECT '08:00:2b:01:02:03'::macaddr"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "macaddr",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for macaddr8 sql ([Sql "SELECT '08:00:2b:01:02:03:04:05'::macaddr8"]) 1`] = `
Object {
  "macaddr8": "08:00:2b:01:02:03:04:05",
}
`;

exports[`Query Interface Should load type for macaddr8 sql ([Sql "SELECT '08:00:2b:01:02:03:04:05'::macaddr8"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "macaddr8",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for money sql ([Sql "SELECT '$1'::money"]) 1`] = `
Object {
  "money": "$1.00",
}
`;

exports[`Query Interface Should load type for money sql ([Sql "SELECT '$1'::money"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "money",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for name sql ([Sql "SELECT 'day'::name"]) 1`] = `
Object {
  "name": "day",
}
`;

exports[`Query Interface Should load type for name sql ([Sql "SELECT 'day'::name"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "name",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for numeric sql ([Sql "SELECT '1.2'::numeric"]) 1`] = `
Object {
  "numeric": "1.2",
}
`;

exports[`Query Interface Should load type for numeric sql ([Sql "SELECT '1.2'::numeric"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "decimal",
      "type": Object {
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for numrange sql ([Sql "SELECT '[1,2)'::numrange"]) 1`] = `
Object {
  "numrange": "[1,2)",
}
`;

exports[`Query Interface Should load type for numrange sql ([Sql "SELECT '[1,2)'::numrange"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "numrange",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for oidvector sql ([Sql "SELECT '1'::oidvector"]) 1`] = `
Object {
  "oidvector": "1",
}
`;

exports[`Query Interface Should load type for oidvector sql ([Sql "SELECT '1'::oidvector"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "vector",
      "type": Object {
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for path sql ([Sql "SELECT '[(1,2),(2,3),(3,4)]'::path"]) 1`] = `
Object {
  "path": "[(1,2),(2,3),(3,4)]",
}
`;

exports[`Query Interface Should load type for path sql ([Sql "SELECT '[(1,2),(2,3),(3,4)]'::path"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "path",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for pg_lsn sql ([Sql "SELECT '16/B374D848'::pg_lsn"]) 1`] = `
Object {
  "pg_lsn": "16/B374D848",
}
`;

exports[`Query Interface Should load type for pg_lsn sql ([Sql "SELECT '16/B374D848'::pg_lsn"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "pg_lsn",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for point sql ([Sql "SELECT '(1,2)'::point"]) 1`] = `
Object {
  "point": Object {
    "x": 1,
    "y": 2,
  },
}
`;

exports[`Query Interface Should load type for point sql ([Sql "SELECT '(1,2)'::point"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "point",
      "type": Object {
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "type": "Number",
            },
          },
        ],
        "type": "ObjectLiteralConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for polygon sql ([Sql "SELECT '((1,2),(2,3),(1,2))'::polygon"]) 1`] = `
Object {
  "polygon": "((1,2),(2,3),(1,2))",
}
`;

exports[`Query Interface Should load type for polygon sql ([Sql "SELECT '((1,2),(2,3),(1,2))'::polygon"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "polygon",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regclass sql ([Sql "SELECT '1'::regclass"]) 1`] = `
Object {
  "regclass": "1",
}
`;

exports[`Query Interface Should load type for regclass sql ([Sql "SELECT '1'::regclass"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regclass",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regconfig sql ([Sql "SELECT '1'::regconfig"]) 1`] = `
Object {
  "regconfig": "1",
}
`;

exports[`Query Interface Should load type for regconfig sql ([Sql "SELECT '1'::regconfig"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regconfig",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regdictionary sql ([Sql "SELECT '1'::regdictionary"]) 1`] = `
Object {
  "regdictionary": "1",
}
`;

exports[`Query Interface Should load type for regdictionary sql ([Sql "SELECT '1'::regdictionary"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regdictionary",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regnamespace sql ([Sql "SELECT '1'::regnamespace"]) 1`] = `
Object {
  "regnamespace": "1",
}
`;

exports[`Query Interface Should load type for regnamespace sql ([Sql "SELECT '1'::regnamespace"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regnamespace",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regoper sql ([Sql "SELECT '1'::regoper"]) 1`] = `
Object {
  "regoper": "1",
}
`;

exports[`Query Interface Should load type for regoper sql ([Sql "SELECT '1'::regoper"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regoper",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regoperator sql ([Sql "SELECT '1'::regoperator"]) 1`] = `
Object {
  "regoperator": "1",
}
`;

exports[`Query Interface Should load type for regoperator sql ([Sql "SELECT '1'::regoperator"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regoperator",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regproc sql ([Sql "SELECT '1'::regproc"]) 1`] = `
Object {
  "regproc": "1",
}
`;

exports[`Query Interface Should load type for regproc sql ([Sql "SELECT '1'::regproc"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regproc",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regprocedure sql ([Sql "SELECT '1'::regprocedure"]) 1`] = `
Object {
  "regprocedure": "1",
}
`;

exports[`Query Interface Should load type for regprocedure sql ([Sql "SELECT '1'::regprocedure"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regprocedure",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regrole sql ([Sql "SELECT '1'::regrole"]) 1`] = `
Object {
  "regrole": "1",
}
`;

exports[`Query Interface Should load type for regrole sql ([Sql "SELECT '1'::regrole"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regrole",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regtype sql ([Sql "SELECT '1'::regtype"]) 1`] = `
Object {
  "regtype": "1",
}
`;

exports[`Query Interface Should load type for regtype sql ([Sql "SELECT '1'::regtype"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regtype",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for regtype sql ([Sql "SELECT '1'::regtype"]) 3`] = `
Object {
  "regtype": "1",
}
`;

exports[`Query Interface Should load type for regtype sql ([Sql "SELECT '1'::regtype"]) 4`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "regtype",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for reltime sql ([Sql "SELECT '1 day'::reltime"]) 1`] = `
Object {
  "reltime": "1 day",
}
`;

exports[`Query Interface Should load type for reltime sql ([Sql "SELECT '1 day'::reltime"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "reltime",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for smgr sql ([Sql "SELECT 'magnetic disk'::smgr"]) 1`] = `
Object {
  "smgr": "magnetic disk",
}
`;

exports[`Query Interface Should load type for smgr sql ([Sql "SELECT 'magnetic disk'::smgr"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "smgr",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for tid sql ([Sql "SELECT '(42,9)'::tid"]) 1`] = `
Object {
  "tid": "(42,9)",
}
`;

exports[`Query Interface Should load type for tid sql ([Sql "SELECT '(42,9)'::tid"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "tid",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for tsrange sql ([Sql "SELECT '[2010-01-01 14:30, 2010-01-01 15:30)'::tsrange"]) 1`] = `
Object {
  "tsrange": "[\\"2010-01-01 14:30:00\\",\\"2010-01-01 15:30:00\\")",
}
`;

exports[`Query Interface Should load type for tsrange sql ([Sql "SELECT '[2010-01-01 14:30, 2010-01-01 15:30)'::tsrange"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "tsrange",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for txid_snapshot sql ([Sql "SELECT '10:20:10,14,15'::txid_snapshot"]) 1`] = `
Object {
  "txid_snapshot": "10:20:10,14,15",
}
`;

exports[`Query Interface Should load type for txid_snapshot sql ([Sql "SELECT '10:20:10,14,15'::txid_snapshot"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "txid_snapshot",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for uuid sql ([Sql "SELECT 'A0EEBC99-9C0B-4EF8-BB6D-6BB9BD380A11'::uuid"]) 1`] = `
Object {
  "uuid": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
}
`;

exports[`Query Interface Should load type for uuid sql ([Sql "SELECT 'A0EEBC99-9C0B-4EF8-BB6D-6BB9BD380A11'::uuid"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "uuid",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for varbit sql ([Sql "SELECT E'111'::varbit"]) 1`] = `
Object {
  "varbit": "111",
}
`;

exports[`Query Interface Should load type for varbit sql ([Sql "SELECT E'111'::varbit"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "varbit",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should load type for xid sql ([Sql "SELECT '1'::xid"]) 1`] = `
Object {
  "xid": "1",
}
`;

exports[`Query Interface Should load type for xid sql ([Sql "SELECT '1'::xid"]) 2`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "xid",
      "type": Object {
        "type": "String",
      },
    },
  ],
}
`;
